@@ -1,4 +1,3 @@
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.IntStream.range;
 import static java.util.stream.Stream.iterate;
 import static org.apache.commons.lang3.tuple.Pair.of;
@@ -7,7 +6,7 @@ import java.util.function.BiPredicate;
 
 interface Dinglemouse {
   static int howManyBees(char[][] hive) {
-    var bs = iterate(0, i -> hive != null && i < hive.length, i -> i + 1).flatMap(i -> range(0, hive[i].length).filter(j -> hive[i][j] == 'b').mapToObj(j -> of(i, j))).collect(toList());
+    var bs = iterate(0, i -> hive != null && i < hive.length, i -> i + 1).flatMap(i -> range(0, hive[i].length).filter(j -> hive[i][j] == 'b').mapToObj(j -> of(i, j))).toList();
 
     BiPredicate<Integer, Integer> up = (i, j) -> i > 1 && hive[i - 1][j] == 'e' && hive[i - 2][j] == 'e';
     BiPredicate<Integer, Integer> down = (i, j) -> i < hive.length - 2 && hive[i + 1][j] == 'e' && hive[i + 2][j] == 'e';
