@@ -1,4 +1,3 @@
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.IntStream.of;
 
 import java.util.List;
@@ -7,7 +6,7 @@ interface Kata {
   static boolean isTune(int[] notes) {
     var tunes = List.of(-10, -8, -6, -5, -3, -1, 0, 2, 4, 5, 6, 7, 9, 11);
     return notes != null && of(notes)
-        .mapToObj(i -> of(notes).map(j -> (j - i) % 12).boxed().collect(toList()))
+        .mapToObj(i -> of(notes).map(j -> (j - i) % 12).boxed().toList())
         .anyMatch(tunes::containsAll);
   }
 }
