@@ -1,7 +1,5 @@
 package com.codewars.anter69;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 import java.util.Map;
 
@@ -10,6 +8,6 @@ interface MyLanguages {
     return results.keySet().stream()
         .filter(l -> results.get(l) > 59)
         .sorted((a, b) -> results.get(b) - results.get(a))
-        .collect(toList());
+        .toList();
   }
 }
